examples/invalid/error_semantico_01.chs
nimais main() {
    cabal edad = 20
    chisme nombre = "Fernando"

    edad = nombre

    chotear("Edad: " + edad)
}